deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heimdal-deployment
  namespace: python
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heimdal
  template:
    metadata:
      labels:
        app: heimdal
    spec:
      containers:
        - env:
            - name: LANGCHAIN_API_KEY
              valueFrom:
                secretKeyRef:
                  key: LANGCHAIN_API_KEY
                  name: heimdal-creds
            - name: OPENAI_API_KEY
              valueFrom:
                secretKeyRef:
                  key: OPENAI_API_KEY
                  name: heimdal-creds
            - name: OPENAI_ORGANIZATION
              valueFrom:
                secretKeyRef:
                  key: OPENAI_ORGANIZATION
                  name: heimdal-creds
          image: devorbitus/heimdal:2.0.41
          imagePullPolicy: IfNotPresent
          name: heimdal
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 256Mi
      serviceAccount: heimdal-sa
      serviceAccountName: heimdal-sa
