deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heimdal-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8501
  selector:
    app: heimdal
  sessionAffinity: None
  type: ClusterIP
